# pypas-web

./: .gitignore  Dockerfile  README.md  justfile  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  rsync_exclude.txt  run-rq.sh  run.sh
.github/workflows/: ci.yml
access/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
access/migrations/: 0001_initial.py  0002_alter_user_token.py
assignments/: admin.py  apps.py  decorators.py  jobs.py  models.py  signals.py  urls.py  views.py
assignments/migrations/: 0001_initial.py  0002_alter_assignment_exercise_alter_assignment_user.py  0003_assignment_created_at_assignment_updated_at.py  0004_alter_assignment_unique_together.py  0005_bucket_frame_assignment_frame.py  0006_alter_frame_options_alter_assignment_passed_and_more.py  0007_alter_assignment_options.py  0008_frame_exercises.py  0009_remove_frame_num_exercises.py  0010_remove_frame_exercises_stock.py  0011_rename_stock_batch.py  0012_alter_batch_exercise_alter_batch_frame.py  0013_rename_batch_pack_alter_pack_options.py  0014_alter_pack_options_alter_pack_exercise_and_more.py  0017_delete_pack.py  (+8 more)
chunks/: admin.py  apps.py  forms.py  models.py  signals.py  urls_admin.py  views.py
exercises/: admin.py  apps.py  forms.py  models.py  querysets.py  signals.py  urls.py  urls_admin.py  views.py
frames/: admin.py  apps.py  filters.py  models.py  querysets.py  signals.py
homepage/: views.py
main/: asgi.py  settings.py  urls.py  wsgi.py
pypas/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: clean.sh
shared/: utils.py
(+41 files in other folders)
