[project]
name = "pypas-web"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.1",
    "django-admin-sortable2>=2.2.6",
    "django-rq>=3.0.1",
    "pathspec>=0.12.1",
    "prettyconf>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.18.0",
    "ipython>=9.2.0",
    "pytest>=8.3.5",
    "pytest-dependency>=0.6.0",
]
prod = [
    "gunicorn>=23.0.0",
]
